syntax = "proto3";

package sum;

option java_multiple_files = true;
option java_package = "com.proto.sum";

message InputValues {
	int32 num1 = 1;
	int32 num2 = 2;
}

message SumRequest {
	InputValues values = 1;
}

message SumResponse{
	int32 sum = 1;
}

service SumService{
	//unary
	rpc Sum(SumRequest) returns (SumResponse) {};
}